iptables.rules
*nat
#whitelist for nat
-N whitelist-nat
#insert whitelisted here like: -A whitelist-nat -i eth1 -s 192.168.x.y -j RETURN
-A whitelist-nat -i eth1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.0.1

-A POSTROUTING -o eth0 -j MASQUERADE
-A PREROUTING -i eth1 -j whitelist-nat
#forward unwhitelisted ips TODO
COMMIT


*filter
#whitelist
-N whitelist
# insert whitelisted here like: -A INPUT -i eth1 -s 192.168.x.y -j RETURN
-A whitelist -m state --state NEW,INVALID -i eth1 -j DROP

-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -j DROP
-A INPUT -i eth1 -j whitelist
COMMIT
